--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     @import url("style/header.css");
 
     :root{
-        --cor-de-fundo:#EBECEE;
-        --branco:#FFFFFF;}
+    --cor-de-fundo:#EBECEE;
+    --branco:#FFFFFF;}
 
-        body{
-            background-color: var(--cor-de-fundo);}
+    body{
+    background-color: var(--cor-de-fundo);
+    }
